# Tradstry-private

./: .env.example  .env.example-production  .gitignore  .prettierignore  LICENSE  agents.sh  middleware.ts  next.config.ts  package.json  start.sh  tailwind.config.ts  tsconfig.json  vercel.json
backend/: .env.example  .gitignore  Cargo.toml  README.md  commands.md  deploy-all.sh  deploy.sh  docker-compose.yml  dockerfile  env.template  qdrant.sh  tradstry-backend.service
backend/agents_service/: .env.example  README.md  mypy-strict.ini  pyproject.toml
backend/agents_service/src/: main.py
backend/agents_service/src/tradstry_agents/: __init__.py
backend/agents_service/src/tradstry_agents/config/: settings.py
backend/agents_service/src/tradstry_agents/graphs/: __init__.py  runtime.py
backend/agents_service/src/tradstry_agents/memory/: __init__.py  openviking_store.py
backend/agents_service/src/tradstry_agents/prompts/: library.py
backend/agents_service/src/tradstry_agents/providers/: __init__.py  base.py  groq.py  openrouter.py
backend/agents_service/src/tradstry_agents/schemas/: __init__.py  messages.py
backend/agents_service/src/tradstry_agents/tools/: __init__.py  runtime.py
backend/agents_service/src/tradstry_agents/transport/: __init__.py  websocket_server.py
backend/database/01_alerts_system/: 01_alert_rules.sql  02_system_nofications.sql
backend/database/02_users_schema/: 01_users_table.sql
backend/database/03_images_schema/: 01_notebook-images.sql
backend/database/04_collaboration_schema/: 01_y_state_column.sql
backend/docs/development/: README.md
backend/docs/production/: README.md
backend/snaptrade-service/: .dockerignore  Dockerfile  Makefile  README.md  deploy.sh  docker-compose.yml  go.mod  go.sum  main.go  setup-env.sh
backend/snaptrade-service/client/: snaptrade.go
backend/snaptrade-service/handlers/: account.go  connection.go  transaction.go  user.go
backend/snaptrade-service/middleware/: auth.go
backend/src/: main.rs
backend/src/graphql/: accounts.rs  ai_chat.rs  analytics.rs  journal.rs  mod.rs  notebook.rs  playbook.rs  users.rs
backend/src/graphql/subscriptions/: ai_chat.rs  mod.rs
backend/src/middleware/: rate_limit.rs
backend/src/models/: README.md  alerts.rs  mod.rs
backend/src/models/ai/: analysis.rs  chat.rs  chat_templates.rs  mod.rs  reports.rs
backend/src/models/analytics/: core.rs  mod.rs  options.rs  performance.rs  risk.rs  time_series.rs
backend/src/models/notebook/: calendar_connections.rs  calendar_events.rs  calendar_sync_cursors.rs  mod.rs  note_collaborators.rs  note_invitations.rs  note_visibility.rs  notebook_folders.rs  notebook_images.rs  notebook_notes.rs  notebook_tags.rs
backend/src/models/notes/: mod.rs  trade_notes.rs
backend/src/models/options/: mod.rs  option_trade.rs
backend/src/models/playbook/: mod.rs  playbook_setup.rs
backend/src/models/stock/: stocks.rs
backend/src/models/tags/: mod.rs  tag.rs  trade_tag_association.rs
backend/src/routes/: alerts.rs  analytics.rs  brokerage.rs  graphql.rs  market.rs  mod.rs  notebook_images.rs  options.rs  playbook.rs  push.rs  stocks.rs  trade_notes.rs  trade_tags.rs  user.rs
backend/src/routes/ai/: analysis.rs  chat.rs  mod.rs  reports.rs
backend/src/routes/notebook/: ai.rs  calendar.rs  collaboration.rs  folders.rs  images.rs  mod.rs  notes.rs  tags.rs
backend/src/service/: README.md  mod.rs  position_service.rs  trade_notes_service.rs  transform.rs
backend/src/service/agents/: client.rs  mod.rs  protocol.rs  tools.rs
backend/src/service/ai/: ai_chat.rs
backend/src/service/ai_service/: ZEXPLAIN.md  mod.rs
backend/src/service/ai_service/interface/: analysis_service.rs  chat_service.rs  mod.rs  reports_service.rs
backend/src/service/ai_service/model_connection/: gemini.rs  mod.rs  model_selector.rs  openrouter.rs
backend/src/service/ai_service/vector_service/: client.rs  formatter.rs  mod.rs  qdrant.rs  vec_generation.rs
backend/src/service/analytics_engine/: mod.rs  risk_metrics.rs  time_series.rs
backend/src/service/analytics_engine/core_metrics/: combine.rs  helpers.rs  individual.rs  main.rs  mod.rs  options.rs  stocks.rs  streaks.rs
backend/src/service/analytics_engine/grouping/: direction.rs  mod.rs  period.rs  strategy.rs  symbol.rs  utils.rs
backend/src/service/analytics_engine/performance_metrics/: behavioral.rs  duration.rs  mod.rs  options.rs  stocks.rs  utils.rs
backend/src/service/auth/: client.rs  mod.rs
backend/src/service/brokerage/: accounts.rs  client.rs  connections.rs  helpers.rs  holdings.rs  mod.rs  sync.rs  transactions.rs  transform.rs
backend/src/service/caching/: analytics.rs  cache_operations.rs  config.rs  converter.rs  health.rs  invalidator.rs  mod.rs  preloader.rs  query_builder.rs  types.rs
backend/src/service/cloudinary/: mod.rs
backend/src/service/email_service/: mod.rs
backend/src/service/market_engine/: analysts.rs  calendar.rs  client_helper.rs  financials.rs  historical.rs  holders.rs  hours.rs  indices.rs  mod.rs  movers.rs  news.rs  quotes.rs  search.rs  sectors.rs  stream_service.rs  transcripts.rs
backend/src/service/notebook_engine/: mod.rs
backend/src/service/notebook_engine/ai/: mod.rs  (+1 more)
backend/src/service/notifications/: alert_dispatcher.rs  alert_worker.rs  alerts.rs  earnings_calendar.rs  mod.rs  push.rs  system.rs
backend/src/service/read_service/: accounts.rs  analytics.rs  images.rs  journal.rs  mod.rs  notebook.rs  playbook.rs  users.rs
backend/src/service/tool_engine/: definitions.rs  executor.rs  mod.rs
backend/src/service/turso/: client.rs  mod.rs
backend/src/service/utils/: account_deletion.rs  mod.rs  rate_limiter.rs  storage_quota.rs
backend/src/turso/: auth.rs  client.rs  config.rs  mod.rs  redis.rs  schema.rs  sync.rs  vector_config.rs
backend/src/turso/schema/: ai_table.rs  brokerage_table.rs  calendar_table.rs  mod.rs  notebook_table.rs  notification_table.rs  option_table.rs  playbook_table.rs  stock_table.rs  tables.rs
backend/src/websocket/: broadcast.rs  collab.rs  manager.rs  messages.rs  mod.rs  server.rs
(+411 files in other folders)
