[package]
name = "tradstry-backend"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tradstry-backend"
path = "src/main.rs"

[dependencies]
# actix-web: Main HTTP server framework (REST APIs, middleware, etc.)
actix-web = "4.4"
# actix-rt: Async runtime support for Actix
actix-rt = "2.9"
# actix-cors: Enable Cross-Origin Resource Sharing (CORS) for APIs
actix-cors = "0.7"
# actix-multipart: Handle file uploads (multipart/form-data) with Actix Web
actix-multipart = "0.6"
# actix-ws: WebSocket support for Actix Web
actix-ws = "0.3"
# actix-web-httpauth: Provides HTTP authentication schemes (e.g., bearer tokens)
actix-web-httpauth = "0.8"

# reqwest: Async HTTP client for making external API requests (REST, JSON, etc.)
reqwest = { version = "0.12.24", features = ["json", "multipart", "rustls-tls-webpki-roots", "cookies", "gzip", "brotli", "deflate"] }

# serde: Enables (de)serialization support, including deriving serde code
serde = { version = "1.0.228", features = ["derive"] }
# serde_json: JSON parsing and serialization
serde_json = "1.0.145"

# dotenvy: Load environment variables from .env files
dotenvy = "0.15"
# uuid: Generate and parse UUIDs (with v4, v5, serde features)
uuid = { version = "1.10", features = ["v4", "v5", "serde"] }
# chrono: Work with dates and times (with serde support)
chrono = { version = "0.4", features = ["serde"] }
# chrono-tz: Support for time zones in chrono datatypes
chrono-tz = "0.10.4"

# anyhow: Flexible error handling by using a generic error type
anyhow = "1.0"
# thiserror: Ergonomic derivation of custom error types
thiserror = "1.0"

# env_logger: Easy logger setup configured via environment variables
env_logger = "0.11.8"
# log: Logging facade for outputting logs in Rust
log = "0.4.28"

# libsql: Embedded SQL database based on SQLite
libsql = "0.9.29"
# sqlx: Async SQL toolkit compatible with SQLite, chrono, uuid, etc.
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "bigdecimal"] }
# bigdecimal: Arbitrary-precision decimal support (with serde integration)
bigdecimal = { version = "0.4", features = ["serde"] }

# urlencoding: Percent-encode data for use in URLs (API and query params)
urlencoding = "2.1"

# hmac: Implements the HMAC cryptographic algorithm for authentication
hmac = "0.12.1"
# sha2: SHA-2 family hash functions for cryptographic operations
sha2 = "0.10.9"
# base64: Encode/decode to/from Base64 (useful for authentication, binary transport)
base64 = "0.22.1"
# futures-util: Extension utilities for working with Rust futures/async
futures-util = "0.3.31"
# tokio-tungstenite: Asynchronous WebSocket client/server over Tokio (with native-tls)
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
# web-push: Sends push notifications via Web Push protocol (with hyper-client backend)
web-push = { version = "0.11.0", features = ["hyper-client"] }

# tokio: Main async runtime, provides tasks, IO, etc. (using the full profile)
tokio = { version = "1.48.0", features = ["full"] }

# bincode: Efficient binary serialization format (for storing data as binary blobs)
bincode = "1.3"

# qdrant-client: Client for interacting with Qdrant vector search database
qdrant-client = "1.7"

# lru: In-memory least-recently-used (LRU) cache implementation
lru = "0.16.2"

# dashmap: Thread-safe concurrent HashMap, used for JWT caching
dashmap = "6.1.0"
# hex: Utilities to encode/decode hexadecimal strings, useful for tokens or signatures
hex = "0.4"

# async-trait: Support for async functions in traits (enables async trait objects)
async-trait = "0.1"

# futures: Primitives and utilities for asynchronous programming
futures = "0.3.31"
# once_cell: Provides single-assignment lazy runtime-initialized statics
once_cell = "1.19"

# finance-query-core: Fetch and interact with financial data sources/APIs
finance-query-core = "0.3.0"
# resend-rs: HTTP client to interface with Resend (email API)
resend-rs = "0.19.0"

# yrs: Implementation of Yjs CRDT for Rust (real-time collaborative editing)
yrs = "0.17"
# y-sync: Helper crate for yjs network sync protocols (compatible with yrs 0.17)
