[package]
name = "tradstry-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
libsql = "0.9.29"
tokio = { version = "1.50.0", features = ["full"] }
anyhow = "1.0.102"
log = "0.4.29"
env_logger = "0.11.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
dotenvy = "0.15.7"
actix-cors = "0.7"
actix-web = "4.13.0"
async-graphql = "7.2.1"
async-graphql-actix-web = "7.2.1"
clerk-rs = { version = "0.4.2", features = ["actix"] }
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
finance-query = "2.4.0"
