[project]
name = "agents-service"
version = "0.1.0"
description = "A microservice for building agents with LangGraph and OpenViking for Tradstry"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "langgraph>=1.1.2",
    "openviking>=0.2.6",
    "pydantic-settings>=2.10.1",
    "uvicorn>=0.34.0",
    "websockets>=15.0.1",
]
