[project]
name = "agents-service"
version = "0.1.0"
description = "A microservice for building agents with LangGraph and OpenViking for Tradstry"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "langgraph>=1.1.2",
    "openviking>=0.2.6",
    "pydantic-settings>=2.10.1",
    "uvicorn>=0.34.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
mypy_path = "src"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
show_error_codes = true
strict = false

[[tool.mypy.overrides]]
module = ["openviking", "openviking.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
